# somethings-fishy

./: .envrc  .gitignore  .guix-channel  .hypatia-baseline.json  .trusted-base-ignore  0-AI-MANIFEST.a2ml  AUDIT.adoc  CONTRIBUTING.md  Cargo.toml  Containerfile  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  PROOF-STATUS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  ROADMAP.adoc  SECURITY.md  TEMPLATE-STANDARDS-AUDIT.adoc  TEST-NEEDS.md  TOPOLOGY.md  build.rs  eclexiaiser.toml  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  stapeln.toml
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  SECURITY.md  SUPPORT  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: boj-build.yml  codeql.yml  dogfood-gate.yml  e2e.yml  governance.yml  hypatia-scan.yml  instant-sync.yml  mirror.yml  openssf-compliance.yml  push-email-notify.yml  quality.yml  release.yml  rhodibot.yml  rust-ci.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  static-analysis-gate.yml  wellknown-enforcement.yml  workflow-linter.yml
.machine_readable/: CLADE.a2ml  ECOSYSTEM.a2ml  ENSAID_CONFIG.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/agent_instructions/: coverage.a2ml  debt.a2ml  methodology.a2ml
.machine_readable/ai/: AI.a2ml  PLACEHOLDERS.adoc  README.adoc
.machine_readable/anchors/: ANCHOR.a2ml  README.adoc
.machine_readable/bot_directives/: debt.a2ml
.machine_readable/compliance/reuse/: dep5
.machine_readable/configs/git-cliff/: cliff.toml
.machine_readable/contractiles/: Justfile  Mustfile.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/contractiles/dust/: Dustfile.a2ml
.machine_readable/contractiles/k9/: methodology-guard.k9.ncl
.machine_readable/contractiles/lust/: Intentfile.a2ml
.machine_readable/contractiles/must/: Mustfile.a2ml
.machine_readable/contractiles/trust/: Trustfile.a2ml
.machine_readable/descriptiles/: 0-AI-MANIFEST.a2ml  META.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/descriptiles/anchor/: ANCHOR.a2ml
.machine_readable/integrations/: feedback-o-tron.a2ml  groove.a2ml  proven.a2ml  verisimdb.a2ml  vexometer.a2ml
.machine_readable/policies/: MAINTENANCE-AXES.a2ml  MAINTENANCE-CHECKLIST.a2ml  SOFTWARE-DEVELOPMENT-APPROACH.a2ml
.machine_readable/scripts/maintenance/: maint-assault.sh
.machine_readable/self-validating/: methodology-guard.k9.ncl
.machine_readable/svc/k9/: methodology-guard.k9.ncl
.well-known/: humans.txt  security.txt
container/: .gatekeeper.yaml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
docs/: RSR_OUTLINE.adoc  proof-debt.md  tech-debt-2026-05-26.md
docs/architecture/: THREAT-MODEL.adoc
docs/attribution/: CITATION.cff  CITATIONS.adoc
docs/decisions/: 0001-adopt-rsr-standard.adoc  0001-purpose-and-scope.adoc  0002-turnitin-autopsy-framing.adoc
docs/developer/: ABI-FFI-README.adoc
docs/governance/: MAINTENANCE-CHECKLIST.a2ml  MAINTENANCE-CHECKLIST.adoc  TSDM.a2ml
docs/practice/: AI-CONVENTIONS.adoc
docs/templates/contractiles/: README.adoc
docs/templates/contractiles/dust/: Dustfile.a2ml
docs/templates/contractiles/lust/: Intentfile.a2ml
docs/templates/contractiles/must/: Mustfile.a2ml
safety_kernel/: .gitignore  alire.toml  safety_kernel.gpr
safety_kernel/src/: robofishy_c_api.adb  robofishy_c_api.ads  robofishy_io.adb  robofishy_io.ads  robofishy_write_guard.adb  robofishy_write_guard.ads
schemas/: feature_vector.ncl
scripts/: validate-template.sh
src/: clone.rs  finding.rs  lib.rs  main.rs  report.rs  safe_io.rs  scan.rs  scene.rs
src/aspects/: README.adoc
src/interface/Abi/: Foreign.idr  Layout.idr  Types.idr
src/interface/ffi/src/: main.zig
src/scanners/: agent_files.rs  banned_patterns.rs  commit_trailers.rs  mod.rs  panic_attack.rs
tests/: aspect_tests.sh  e2e.sh  scanners.rs  spark_guard_reject.rs
tests/e2e/: template_instantiation_test.sh
tests/fuzz/: README.adoc
verification/proofs/: README.adoc
verification/proofs/agda/: Properties.agda
verification/proofs/coq/: TypeSafety.v
verification/proofs/idris2/: Types.idr
verification/proofs/lean4/: ApiTypes.lean
verification/proofs/tlaplus/: StateMachine.tla
(+6 files in other folders)
